# Logical_Expression_Simplification

./: CMakeLists.txt  README.md  application.cpp  application.hpp  column.cpp  column.hpp  expression.cpp  expression.hpp  group.cpp  group.hpp  main.cpp  node.cpp  node.hpp  string.cpp  string.hpp
